<resources>
    <string name="app_name">HostelBasera</string>
    <string name="deep_link_app_name">/hostelbasera</string>
    <string name="google_maps_key">AIzaSyAvcp0ojqeNunqmNGGfFeEs0lna-BkBLDw</string><!--AIzaSyCO_w9y8aBbYyNc-SVz0fhHliHKCk2ecp4-->
    <string name="google_maps_new_key">AIzaSyBkapHHX6ZyFEf_GMM-Gbnsg9SwkoaC5Ws</string>

    <string name="facebook_app_id">337398663753209</string>
    <string name="fb_login_protocol_scheme">fb337398663753209</string>

    <string name="msg_NO_INTERNET_TITLE">Not connected</string>
    <string name="msg_NO_INTERNET_MSG">Oops… It seems your connection couldn\'t reach us, please verify your settings.</string>
    <string name="no_internet_msg">Please connect the device with internet</string>
    <string name="msg_goto_settings">CONNECTION SETTINGS</string>
    <string name="msg_server_error">The server might be down, please try again later.</string>
    <string name="error_msg_connection_timeout">The request timed out please try again.</string>

    <string name="rationale_message">we need permission for <b>Attachment &amp; Address</b> <!--&amp; <b>OTP</b>--> </string>
    <string name="denied_message">If you reject permission, you can not use this attachment &amp; address <!--&amp; OTP-->
        feature.</string>
    <string name="back_again">Please click BACK again to exit</string>
    <string name="ok">OK</string>

    <string name="location_message">we need permission for <b>Near Me</b></string>
    <string name="location_denied_message">If you reject permission, you can not use this near me feature.</string>

    <string name="call_message">we need permission for <b>Call</b></string>
    <string name="call_denied_message">If you reject permission, you can not use this call feature.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="retry">Retry</string>
    <string name="buyer">Buyer</string>
    <string name="seller">Seller</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password_">Forgot Password?</string>
    <string name="forget_password">Forgot Password</string>
    <string name="don_t_have_an_account_">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="address">Address</string>
    <string name="all_cities">All Cities</string>
    <string name="pg_hostel">PG/Hostel</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="my_pg_hostel">My PG/Hostel</string>
    <string name="feedback">Feedback</string>
    <string name="share_app">Share App</string>
    <string name="sign_out">Sign Out</string>
    <string name="hostel_pg_suggestion">Hostel / PG Suggestion</string>
    <string name="girls">Girls</string>
    <string name="boys">Boys</string>
    <string name="both">Both</string>
    <string name="near_me">Near Me</string>
    <string name="search">Search</string>
    <string name="no_data_found">No Data Found</string>
    <string name="type_of_property">Type of Property</string>
    <string name="size_of_property">Size of Property</string>
    <string name="hostel_for">Hostel for</string>
    <string name="pg_for">PG for</string>
    <string name="amenities">Amenities</string>
    <string name="price">Price</string>
    <string name="book_now">Book Now</string>
    <string name="bookmark">Bookmark</string>
    <string name="review">Review &amp; Rating</string>
    <string name="rate">Rate</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="apply">Apply</string>
    <string name="clear_all">Clear All</string>

    <string name="filterby">Filter By</string>
    <string name="enquiry">Enquiry</string>
    <string name="user_reviews">User Reviews</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="search_for_hostel_pg">Search for Hostel / PG</string>
    <string name="rooms">Rooms</string>
    <string name="call">Call</string>
    <string name="booked_hostel_pg">Booked Hostel/PG</string>
    <string name="property">Property</string>
    <string name="enter_name">Enter Name</string>
    <string name="category">Category</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_address">Enter Address</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter Description</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="facility">Facility</string>
    <string name="water_timings">Water Timings</string>
    <string name="enter_water_timings">Enter Water Timings</string>
    <string name="contact">Contact</string>
    <string name="open_hours">Open Hours</string>
    <string name="enter_open_hours">Enter Open Hours(00:00AM to 00:00PM)</string>
    <string name="images">Images</string>
    <string name="add">Add</string>
    <string name="enter_price">Enter Price</string>
    <string name="add_hostel_pg">Add Hostel/PG</string>
    <string name="update_hostel_pg">Update Hostel/PG</string>
    <string name="enter_contact">Enter Contact</string>
    <string name="room_details">Room Details</string>

    <string name="_none_selected_">- None Selected -</string>
    <string name="enter_laundry_fees">Enter Laundry Fees</string>
    <string name="laundry_fees">Laundry Fees</string>
    <string name="cooking_menu">Cooking Menu</string>
    <string name="buy_now">Buy Now</string>

    <string name="pricing">Hostel / PG Pricing</string>

    <string name="leku_title_activity_location_picker">Location Picker</string>
    <string name="leku_load_location_error">Something went wrong. Please try again.</string>
    <string name="leku_no_search_results">There are no results for your search</string>
    <string name="leku_unknown_location">unknown location</string>
    <string name="leku_voice_search_promp">Search by voice…</string>
    <string name="leku_voice_search_extra_language">en-EN</string>
    <string name="leku_toolbar_action_voice_title">Voice</string>
    <string name="leku_search_hint">Search</string>
    <string name="select_hostel_pg_plans">Select Hostel/ PG Plans</string>

    <string name="new_update_available"><b>New update available!</b> </string>
    <string name="change_password">Change Password</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="email_mobile">Email / Mobile</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="get_otp">Get OTP</string>

    <string name="contact_us">Contact Us</string>
    <string name="renew">Renew</string>
    <string name="powered_by_cg_3d_world">From HostelBasera Services</string>

    <string name="select_image">Select Image</string>
    <string name="select_a_city">Select a City</string>
    <string name="popular_cities">Popular Cities</string>
    <string name="all">All</string>
    <string name="enter_area">Enter Area</string>
    <string name="area">Area</string>
    <string name="mobile">Mobile</string>
    <string name="otp">OTP</string>
    <string name="verify">Verify</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="already_have_an_account_">Already have an account ?</string>
    <string name="refer_by">Refer By</string>
    <string name="enter_refer_by">Enter Refer By</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="refund_policy">Refund Policy</string>
    <string name="booking_policy">Booking Policy</string>
    <string name="non_discrimination_policy">Non Discrimination Policy</string>
    <string name="guest_refund_policy">Guest Refund Policy</string>
    <string name="service_terms">Service Terms</string>
    <string name="terms_and_conditions">Terms and Conditions</string>

    <string name="dateFormat" translatable="false">EE, dd MMM</string>
    <string name="timeFormat" translatable="false">EE, dd MMM HH:mm</string>
    <string name="period" translatable="false">%1$s – %2$s</string>

    <string name="UploadDateFormat">yyyy-MM-dd</string>

    <string name="Max_10mb_file_allowed">Max 10mb file allowed.</string>

    <string name="booking_dates">Booking Dates</string>
    <string name="documents">Documents</string>
    <string name="pay_deposit_to_owner_by_your_own">Pay deposit to owner by your own</string>

    <string name="please_add_document">Please add document</string>
    <string name="booking_request">Booking Request\'s</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="pay">Pay</string>
    <string name="rent">Rent</string>
    <string name="coupon">Coupon</string>
    <string name="wallet">Wallet</string>
    <string name="amount_payable">Amount Payable</string>
    <string name="amount_details">Amount Details</string>
    <string name="no_coupon_found">No Coupon Found</string>
    <string name="expiry_date">Expiry Date</string>

    <string name="applied">Applied</string>
</resources>
