<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pg_hostel"
            android:icon="@drawable/nav_pg_hostels"
            android:title="@string/pg_hostel" />
        <item
            android:id="@+id/nav_bookmarks"
            android:icon="@drawable/nav_bookmark"
            android:title="@string/bookmarks" />
        <!--TODO: My PG/Hostel is remove due to book button-->
        <!-- <item
             android:id="@+id/nav_my_pg_hostel"
             android:icon="@drawable/nav_my_pg_hostel"
             android:title="@string/my_pg_hostel" />-->
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/nav_feedback"
            android:title="@string/feedback" />
        <!--<item
            android:id="@+id/nav_change_password"
            android:icon="@drawable/nav_change_pass"
            android:title="@string/change_password" />-->
        <item
            android:id="@+id/nav_share_app"
            android:icon="@drawable/nav_share"
            android:title="@string/share_app" />

        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/footer_contact"
            android:title="@string/contact_us" />

        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/nav_signout"
            android:title="@string/sign_out" />

    </group>
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about_us"
            android:title="@string/about_us" />

        <item
            android:id="@+id/nav_privacy_policy"
            android:title="@string/privacy_policy" />

        <item
            android:id="@+id/nav_refund_policy"
            android:title="@string/refund_policy" />

        <item
            android:id="@+id/nav_booking_policy"
            android:title="@string/booking_policy" />
        <item
            android:id="@+id/nav_non_discrimination_policy"
            android:title="@string/non_discrimination_policy" />

        <item
            android:id="@+id/nav_guest_refund_policy"
            android:title="@string/guest_refund_policy" />

        <item
            android:id="@+id/nav_service_terms"
            android:title="@string/service_terms" />

        <item
            android:id="@+id/nav_terms_and_conditions"
            android:title="@string/terms_and_conditions" />
    </group>


</menu>
