<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pg_hostel"
            android:icon="@drawable/nav_pg_hostels"
            android:title="@string/my_pg_hostel" />
        <item
            android:id="@+id/nav_booked_hostel_pg"
            android:icon="@drawable/nav_my_pg_hostel"
            android:title="@string/booked_hostel_pg" />
        <item
            android:id="@+id/nav_enquiry"
            android:icon="@drawable/nav_feedback"
            android:title="@string/enquiry" />
        <item
            android:id="@+id/nav_share_app"
            android:icon="@drawable/nav_share"
            android:title="@string/share_app" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/nav_signout"
            android:title="@string/sign_out" />
    </group>
</menu>
