<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/dim_15dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/forget_password"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_mobile_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_12dp"
        android:background="@drawable/rounded_enquiry_description"
        android:gravity="top"
        android:hint="@string/enter_mobile_number"
        android:inputType="phone"
        android:padding="@dimen/dim_5dp"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/dim_text15" />

    <TextView
        android:id="@+id/tv_get_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="@dimen/dim_text18"
        android:textColor="@color/colorPrimary"
        android:padding="@dimen/dim_10dp"
        android:textStyle="bold"
        android:text="@string/get_otp"/>

    <EditText
        android:id="@+id/edt_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_enquiry_description"
        android:gravity="top"
        android:hint="@string/enter_otp"
        android:inputType="text"
        android:padding="@dimen/dim_5dp"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/dim_text15" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_8dp"
        android:gravity="end">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dim_8dp"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/tv_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dim_8dp"
            android:text="@string/submit"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_medium" />
    </LinearLayout>
</LinearLayout>