<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dim_5dp"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/dim_8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dim_10dp"
            android:gravity="center"
            android:text="@string/contact"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/dim_text18"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_0_5_dp"
            android:background="@color/border_gray" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dim_8dp"
            app:cardCornerRadius="@dimen/dim_5dp">

            <EditText
                android:id="@+id/edt_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/enter_contact"
                android:inputType="phone"
                android:padding="@dimen/dim_8dp"
                android:textSize="@dimen/dim_text13" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="@dimen/dim_5dp">

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/dim_text14" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>